[gd_scene load_steps=7 format=3 uid="uid://tvsjj2hetghj"]

[ext_resource type="Texture2D" uid="uid://dnp4ogt8h1dhl" path="res://assets/items/blade.png" id="1_dhxgw"]
[ext_resource type="Script" uid="uid://ctjpqqxwb0jdd" path="res://scenes/blade.gd" id="1_l0mm0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0mm0"]
size = Vector2(2.4, 22.0617)

[sub_resource type="Animation" id="Animation_6v86d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0mm0"]
resource_name = "swing"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, 0.523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6v86d"]
_data = {
&"RESET": SubResource("Animation_6v86d"),
&"swing": SubResource("Animation_l0mm0")
}

[node name="blade" type="Node2D"]
script = ExtResource("1_l0mm0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 15)
rotation = -0.785398
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_dhxgw")
offset = Vector2(0, -6)

[node name="Area2D" type="Area2D" parent="Sprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-4.76837e-07, -8.76812)
shape = SubResource("RectangleShape2D_l0mm0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_6v86d")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
